@@ -727,8 +727,9 @@ Q_DECL_EXPORT void
 CallSmokeMethod(Smoke * smoke, int methodId, void * obj, Smoke::StackItem * sp, int items)
 {
 	Smoke::Method meth = smoke->methods[methodId];
+	const char *methname = smoke->methodNames[meth.name];
 #ifdef DEBUG
-	printf("ENTER CallSmokeMethod(methodId: %d methodName: %s target: 0x%8.8x class: %s items: %d module: %s)\n", methodId, smoke->methodNames[meth.name], obj, smoke->className(meth.classId), items, smoke->moduleName());
+	printf("ENTER CallSmokeMethod(methodId: %d methodName: %s target: 0x%8.8x class: %s items: %d module: %s)\n", methodId, methname, obj, smoke->className(meth.classId), items, smoke->moduleName());
 #endif
 
 	// C# operator methods must be static, and so some C++ instance methods with one argument
@@ -737,13 +738,17 @@ CallSmokeMethod(Smoke * smoke, int methodId, void * obj, Smoke::StackItem * sp, 
 	// that 'operator>>' and 'operator<<' methods in C# must have a second arg of type int,
 	// and so they are mapped onto the instance methods Read() and Write() in C#.
 	if (	meth.numArgs == 1
-			&& qstrncmp("operator", smoke->methodNames[meth.name], sizeof("operator")) == 0
-			&& qstrncmp("operator<<", smoke->methodNames[meth.name], sizeof("operator<<")) != 0
-			&& qstrncmp("operator>>", smoke->methodNames[meth.name], sizeof("operator>>")) != 0 )
+			&& qstrncmp("operator", methname, sizeof("operator")) == 0
+			&& qstrncmp("operator<<", methname, sizeof("operator<<")) != 0
+			&& qstrncmp("operator>>", methname, sizeof("operator>>")) != 0 )
 	{ // instance operator
 		obj = sp[1].s_class;
 		sp[1] = sp[2];
 		items = 1;
+	} else if (meth.numArgs == 0 && (qstrcmp("operator++", methname) == 0 || qstrcmp("operator--", methname) == 0)) {
+		// instance operator++ / operator-- method that maps onto a static C# operator method
+		obj = sp[1].s_class;
+		items = 0;
 	}
 
 	Qyoto::MethodCall c(smoke, methodId, obj, sp, items);
